fix: dark mode

--- a/TokynoSora.css
+++ b/TokynoSora.css
@@ -55,16 +55,16 @@ html,
 /*top_bar背景及文字顏色*/
 :is(url({)),
 #top_bar,
-#top_bar .bar-icon,
 :is(url(})) {
   color: var(--top-bar-text-color);
+  background: var(--top-bar-bg-color);
+  backdrop-filter: saturate(var(--blur-saturate)) blur(var(--blur-px));
+  -webkit-backdrop-filter: saturate(var(--blur-saturate)) blur(var(--blur-px));
 }
 :is(url({)),
 .bar-color,
 :is(url(})) {
-  background: var(--top-bar-bg-color);
-  backdrop-filter: saturate(var(--blur-saturate)) blur(var(--blur-px));
-  -webkit-backdrop-filter: saturate(var(--blur-saturate)) blur(var(--blur-px));
+  background: none;
 }
 :is(url({)),
 #top_bar #top-bar-main .tab.current:after,
@@ -164,7 +164,6 @@ body:is(url(})) {
   -webkit-backdrop-filter: saturate(var(--blur-saturate)) blur(var(--blur-px));
 }
 :is(url({)),
-#noti-list .pop-view-content,
 .pop-view,
 :is(url(})) {
   background: var(--plurk-bg-color);
@@ -172,9 +171,21 @@ body:is(url(})) {
   -webkit-backdrop-filter: saturate(var(--blur-saturate)) blur(var(--blur-px));
 }
 :is(url({)),
+.pop-view#noti-list li.new-noti,
+:is(url(})) {
+  background: transparent;
+  color: var(--theme-main-color);
+}
+:is(url({)),
+.pop-view#noti-list .pop-view-content,
 #noti-list ul,
 :is(url(})) {
   background: none;
+}
+:is(url({)),
+.pop-menu li.sep,
+:is(url(})) {
+  background: rgba(223, 223, 223, 1);
 }
 :is(url({)),
 #noti-list li,
